# why3

./: .gitignore  Makefile.in  configure.in  dune  dune-project  dune-workspace.in  why3-ide.opam  why3-isabelle.opam  why3.opam
bench/: bench
examples/: topological_sorting.mlw
examples/c_cursor/: Makefile
examples/defunctionalization/: Makefile
examples/euler001/: Makefile
examples/gcd/: Makefile
examples/multiprecision/: Makefile
examples/prover/: Makefile
examples/sudoku/: Makefile
examples/vstte10_max_sum/: Makefile
examples/vstte12_combinators/: Makefile
misc/: Dockerfile.build
plugins/cfg/: dune
plugins/parser/: dune
plugins/python/: dune  py_parser.mly
plugins/tptp/: dune  tptp_parser.mly  tptp_printer.ml  tptp_typing.ml
plugins/transform/: dune  hypothesis_selection.ml
share/: dune  provers-detection-data.conf
share/bash/: why3
src/: config.sh.in  dune  why3.ml
src/core/: dune  keywords.mli  term.ml
src/driver/: autodetection.ml  call_provers.ml  driver_parser.mly  dune  prove_client.ml  whyconf.ml  whyconf.mli
src/extract/: dune
src/ide/: dune  gconfig.ml  why3_resetgc.ml  why3ide.ml
src/isabelle-client/: dune
src/mlw/: dune
src/parser/: dune  handcrafted.messages.copy  parser.mly  parser_common.mly
src/parser/tidy_menhir/: dune  tidy_menhir.ml
src/printer/: coq.mli  dune
src/session/: compress.none.ml  compress.z.ml  dune  termcode.ml
src/tools/: dune  main.ml  why3config.ml  why3extract.ml  why3prove.ml
src/transform/: dune  matching.ml
src/util/: config.mli  constant.ml  debug.ml  dune  loc.ml  mlmpfr_wrapper.mli  mlmpfr_wrapper.real.ml  plugin.ml  plugin.mli  pp.mli  sysutil.ml  sysutil.mli  wstdlib.ml
src/why3doc/: dune
src/why3session/: dune
