(env ( _ (flags  -w A-4-9-41-44-45-50-52@5@8@48)))


(install
 (package why3)
 (section (site (why3 datadir)))
 (files
;find stdlib -name "*.mlw" -printf "(%p as %p)\n"
(stdlib/graph.mlw as stdlib/graph.mlw)
(stdlib/stack.mlw as stdlib/stack.mlw)
(stdlib/ieee_float.mlw as stdlib/ieee_float.mlw)
(stdlib/witness.mlw as stdlib/witness.mlw)
(stdlib/int.mlw as stdlib/int.mlw)
(stdlib/for_drivers.mlw as stdlib/for_drivers.mlw)
(stdlib/number.mlw as stdlib/number.mlw)
(stdlib/map.mlw as stdlib/map.mlw)
(stdlib/list.mlw as stdlib/list.mlw)
(stdlib/hashtbl.mlw as stdlib/hashtbl.mlw)
(stdlib/pigeon.mlw as stdlib/pigeon.mlw)
(stdlib/queue.mlw as stdlib/queue.mlw)
(stdlib/bool.mlw as stdlib/bool.mlw)
(stdlib/bag.mlw as stdlib/bag.mlw)
(stdlib/floating_point.mlw as stdlib/floating_point.mlw)
(stdlib/debug.mlw as stdlib/debug.mlw)
(stdlib/microc.mlw as stdlib/microc.mlw)
(stdlib/tptp.mlw as stdlib/tptp.mlw)
(stdlib/byte_string.mlw as stdlib/byte_string.mlw)
(stdlib/array.mlw as stdlib/array.mlw)
(stdlib/ocaml.mlw as stdlib/ocaml.mlw)
(stdlib/seq.mlw as stdlib/seq.mlw)
(stdlib/option.mlw as stdlib/option.mlw)
(stdlib/exn.mlw as stdlib/exn.mlw)
(stdlib/null.mlw as stdlib/null.mlw)
(stdlib/matrix.mlw as stdlib/matrix.mlw)
(stdlib/fmap.mlw as stdlib/fmap.mlw)
(stdlib/io.mlw as stdlib/io.mlw)
(stdlib/ref.mlw as stdlib/ref.mlw)
(stdlib/mach/int.mlw as stdlib/mach/int.mlw)
(stdlib/mach/onetime.mlw as stdlib/mach/onetime.mlw)
(stdlib/mach/c.mlw as stdlib/mach/c.mlw)
(stdlib/mach/fxp.mlw as stdlib/mach/fxp.mlw)
(stdlib/mach/peano.mlw as stdlib/mach/peano.mlw)
(stdlib/mach/array.mlw as stdlib/mach/array.mlw)
(stdlib/mach/float.mlw as stdlib/mach/float.mlw)
(stdlib/mach/matrix.mlw as stdlib/mach/matrix.mlw)
(stdlib/mach/tagset.mlw as stdlib/mach/tagset.mlw)
(stdlib/mach/bv.mlw as stdlib/mach/bv.mlw)
(stdlib/string.mlw as stdlib/string.mlw)
(stdlib/regexp.mlw as stdlib/regexp.mlw)
(stdlib/real.mlw as stdlib/real.mlw)
(stdlib/relations.mlw as stdlib/relations.mlw)
(stdlib/algebra.mlw as stdlib/algebra.mlw)
(stdlib/bv.mlw as stdlib/bv.mlw)
(stdlib/random.mlw as stdlib/random.mlw)
(stdlib/set.mlw as stdlib/set.mlw)
(stdlib/cursor.mlw as stdlib/cursor.mlw)
(stdlib/bintree.mlw as stdlib/bintree.mlw)
(stdlib/pqueue.mlw as stdlib/pqueue.mlw)
(stdlib/python.mlw as stdlib/python.mlw)
(stdlib/function.mlw as stdlib/function.mlw)
(stdlib/tree.mlw as stdlib/tree.mlw)
; find drivers \( -name "*.drv" -o -name "*.gen" \) -printf "(%p as %p)\n"
(drivers/why3_smt.drv as drivers/why3_smt.drv)
(drivers/alt_ergo_fp.drv as drivers/alt_ergo_fp.drv)
(drivers/pvs.drv as drivers/pvs.drv)
(drivers/pvs-common.gen as drivers/pvs-common.gen)
(drivers/isabelle-realize.drv as drivers/isabelle-realize.drv)
(drivers/smt-libv2-floats-gnatprove.gen as drivers/smt-libv2-floats-gnatprove.gen)
(drivers/coq-realize.drv as drivers/coq-realize.drv)
(drivers/tptp-tff1.drv as drivers/tptp-tff1.drv)
(drivers/z3.drv as drivers/z3.drv)
(drivers/princess.drv as drivers/princess.drv)
(drivers/coq-ssreflect.drv as drivers/coq-ssreflect.drv)
(drivers/z3_471.drv as drivers/z3_471.drv)
(drivers/why3_tptp.drv as drivers/why3_tptp.drv)
(drivers/coq.drv as drivers/coq.drv)
(drivers/no-bv.gen as drivers/no-bv.gen)
(drivers/spass.drv as drivers/spass.drv)
(drivers/isabelle.drv as drivers/isabelle.drv)
(drivers/cvc4_15_counterexample.drv as drivers/cvc4_15_counterexample.drv)
(drivers/smtlib-strings.gen as drivers/smtlib-strings.gen)
(drivers/mathematica.drv as drivers/mathematica.drv)
(drivers/psyche.drv as drivers/psyche.drv)
(drivers/cvc4-realize.drv as drivers/cvc4-realize.drv)
(drivers/iprover.drv as drivers/iprover.drv)
(drivers/polypaver.drv as drivers/polypaver.drv)
(drivers/alt_ergo_2_2_0.drv as drivers/alt_ergo_2_2_0.drv)
(drivers/safeprover.drv as drivers/safeprover.drv)
(drivers/ocaml64.drv as drivers/ocaml64.drv)
(drivers/colibri.drv as drivers/colibri.drv)
(drivers/cvc4.drv as drivers/cvc4.drv)
(drivers/tptp.gen as drivers/tptp.gen)
(drivers/z3_432.drv as drivers/z3_432.drv)
(drivers/smt-libv2-floats-int_via_bv.gen as drivers/smt-libv2-floats-int_via_bv.gen)
(drivers/cvc4_16_counterexample.drv as drivers/cvc4_16_counterexample.drv)
(drivers/colibri2.drv as drivers/colibri2.drv)
(drivers/cvc4_16.drv as drivers/cvc4_16.drv)
(drivers/z3_471_counterexample.drv as drivers/z3_471_counterexample.drv)
(drivers/yices.drv as drivers/yices.drv)
(drivers/smt-libv2.gen as drivers/smt-libv2.gen)
(drivers/mathsat.drv as drivers/mathsat.drv)
(drivers/cvc4_17_strings.drv as drivers/cvc4_17_strings.drv)
(drivers/smt-libv2-floats-int_via_real.gen as drivers/smt-libv2-floats-int_via_real.gen)
(drivers/vampire-smt.drv as drivers/vampire-smt.drv)
(drivers/cvc4_15.drv as drivers/cvc4_15.drv)
(drivers/z3_bv.gen as drivers/z3_bv.gen)
(drivers/simplify.drv as drivers/simplify.drv)
(drivers/cvc4_14.drv as drivers/cvc4_14.drv)
(drivers/ocaml-unsafe-int.drv as drivers/ocaml-unsafe-int.drv)
(drivers/isabelle-common.gen as drivers/isabelle-common.gen)
(drivers/why3.drv as drivers/why3.drv)
(drivers/metitarski.drv as drivers/metitarski.drv)
(drivers/cvc4_16.gen as drivers/cvc4_16.gen)
(drivers/spass_types.drv as drivers/spass_types.drv)
(drivers/alt_ergo.drv as drivers/alt_ergo.drv)
(drivers/z3_440_counterexample.drv as drivers/z3_440_counterexample.drv)
(drivers/cvc4_17_strings_counterexample.drv as drivers/cvc4_17_strings_counterexample.drv)
(drivers/z3_smtv1.drv as drivers/z3_smtv1.drv)
(drivers/cvc4_17_counterexample.drv as drivers/cvc4_17_counterexample.drv)
(drivers/cvc3.drv as drivers/cvc3.drv)
(drivers/z3_471_nobv.drv as drivers/z3_471_nobv.drv)
(drivers/smt-libv2-bv.gen as drivers/smt-libv2-bv.gen)
(drivers/smt-libv2-floats.gen as drivers/smt-libv2-floats.gen)
(drivers/discrimination.gen as drivers/discrimination.gen)
(drivers/eprover.drv as drivers/eprover.drv)
(drivers/alt_ergo_model.drv as drivers/alt_ergo_model.drv)
(drivers/zenon.drv as drivers/zenon.drv)
(drivers/alt_ergo_2_3.drv as drivers/alt_ergo_2_3.drv)
(drivers/z3_440.drv as drivers/z3_440.drv)
(drivers/alt_ergo_common.drv as drivers/alt_ergo_common.drv)
(drivers/tptp-tff0.drv as drivers/tptp-tff0.drv)
(drivers/c.drv as drivers/c.drv)
(drivers/verit.drv as drivers/verit.drv)
(drivers/cvc4_bv.gen as drivers/cvc4_bv.gen)
(drivers/coq-common.gen as drivers/coq-common.gen)
(drivers/smt-libv2-gnatprove.gen as drivers/smt-libv2-gnatprove.gen)
(drivers/alt_ergo_smt2.drv as drivers/alt_ergo_smt2.drv)
(drivers/vampire.drv as drivers/vampire.drv)
(drivers/smt-libv2-bv-realization.gen as drivers/smt-libv2-bv-realization.gen)
(drivers/cakeml.drv as drivers/cakeml.drv)
(drivers/yices-smt2.drv as drivers/yices-smt2.drv)
(drivers/cvc4_17.drv as drivers/cvc4_17.drv)
(drivers/zenon_modulo.drv as drivers/zenon_modulo.drv)
(drivers/beagle.drv as drivers/beagle.drv)
(drivers/pvs-realize.drv as drivers/pvs-realize.drv)
(drivers/gappa.drv as drivers/gappa.drv)
(drivers/metis.drv as drivers/metis.drv)
))

(include coq.dune)
(include pvs.dune)
(include isabelle.dune)
