(library
     (name why3_core)
     (public_name why3.core)
     (modules
        ident ty term pattern decl coercion theory
        task pretty dterm env trans printer model_parser
        keywords parser_tokens
     )
     (flags -open Why3_util -w A-4-9-41-44-45-50-52@5@8@48)
     (libraries why3.util num re)
)

(rule
  (targets parser_tokens.ml parser_tokens.mli)
 (action (run menhir --base parser_tokens --only-tokens %{dep:../parser/parser_common.mly}))
)
